rules: fine generated ADs_merged

--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Convert AD Rules into mrs
       run: |
-        curl -skL https://github.com/JohnsonRan/CRules/raw/master/rules/convert.sh | bash
+        bash scripts/convert.sh
 
     - name: more mrs
       run: |
