mihomo: disable `force-dns-mapping` ECH stuff Signed-off-by: JohnsonRan <me@ihtw.moe>

--- a/config/AIB.yaml
+++ b/config/AIB.yaml
@@ -37,7 +37,7 @@ profile:
 
 sniffer:
   enable: true
-  force-dns-mapping: true
+  force-dns-mapping: false
   parse-pure-ip: true
   sniff:
     HTTP:
