--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -37,7 +37,7 @@ profile:
 
 sniffer:
   enable: true
-  force-dns-mapping: true
+  force-dns-mapping: false
   parse-pure-ip: true
   sniff:
     HTTP:
